@@ -38,14 +38,32 @@
             <version>2.23.0</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
+        
+
+		<dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-core</artifactId>
+            <version>2.0.9</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.9</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>2.0.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-reflect</artifactId>
+            <version>2.0.9</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine -->
 		<dependency>
@@ -54,41 +72,36 @@
 		    <version>5.6.2</version>
 		    <scope>test</scope>
 		</dependency>
-
-<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-engine >
+		
+<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-engine -->
 <dependency>
     <groupId>org.junit.platform</groupId>
     <artifactId>junit-platform-engine</artifactId>
     <version>1.7.0</version>
     <scope>test</scope>
-</dependency-->
+</dependency>
 
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>1.6.4</version>
-            <scope>test</scope>
-        </dependency>
-
+        
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <!--<groups>fast</groups>-->
-                    <excludedGroups>slow</excludedGroups>
-                    <properties>
-                        <!--
-                        <configurationParameters>
-                            junit.jupiter.conditions.deactivate = *
-                        </configurationParameters>
-                        -->
-                    </properties>
+					<!-- Allow JUnit to access the test classes -->
+    				<argLine>
+	                    --add-opens java.base/java.lang=ALL-UNNAMED
+	                    --add-opens java.base/java.time=ALL-UNNAMED
+	                    --add-opens java.base/java.time.format=ALL-UNNAMED
+	                    --add-opens java.base/java.io=ALL-UNNAMED
+	                    --add-opens java.base/java.util=ALL-UNNAMED
+	                </argLine> 
                 </configuration>
             </plugin>
+            
         </plugins>
     </build>
 
